--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="mount" style="margin-top:16px;"></div>
 
     <script>
-      const BACKEND = "https://zaai-chatkit.onrender.com"; // <-- din backend
+const BACKEND = "https://zaai-chatkit.onrender.com";
       const debug = (msg) => (document.getElementById("debug").textContent += msg + "\n");
 
       async function getClientSecret() {
