--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         width: 56px;
         height: 56px;
         border-radius: 999px;
-        background: #00364a; /* Match ChatKit accent color */
+        background: #9F80DA; /* Match ChatKit accent color */
         color: #fff;
         display: flex;
         align-items: center;
@@ -340,12 +340,12 @@
             density: 'normal',
             color: {
               accent: {
-                primary: '#00364a',
+                primary: '#9F80DA',
                 level: 1
               },
               surface: {
                 background: '#ffffff',
-                foreground: '#942192'
+                foreground: '#ffffff'
               }
             },
             typography: {
@@ -391,7 +391,7 @@
             }
           },
           startScreen: {
-            greeting: 'Chatta med ZAAI!',
+            greeting: 'Chatta med oss!',
             prompts: []
           }
         });
