--- a/index.html
+++ b/index.html
@@ -393,6 +393,13 @@
           startScreen: {
             greeting: 'Chatta med oss!',
             prompts: []
+          },
+          header: {
+            visible: false
+          },
+          initialThread: null,
+          history: {
+            enabled: false
           }
         });
 
